@@ -1,8 +1,8 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
-from trytond.pool import PoolMeta
+from trytond.pool import PoolMeta, Pool
 
-__all__ = ['PartyReplace']
+__all__ = ['PartyReplace', 'PartyErase']
 
 
 class PartyReplace:
@@ -14,3 +14,18 @@ class PartyReplace:
         return super(PartyReplace, cls).fields_to_replace() + [
             ('web.user', 'party'),
             ]
+
+
+class PartyErase:
+    __metaclass__ = PoolMeta
+    __name__ = 'party.erase'
+
+    def to_erase(self, party_id):
+        pool = Pool()
+        User = pool.get('web.user')
+        to_erase = super(PartyErase, self).to_erase(party_id)
+        to_erase.append(
+            (User, [('party', '=', party_id)], True,
+                ['email'],
+                [None]))
+        return to_erase
